# mpu6050-drivers

./: .gitignore  Cargo.toml  Makefile  README.md  run.sh
.cargo/: config.toml
.github/workflows/: ci.yml  crate-publish.yml  release.yml
boards/esp32-c3/: Cargo.toml  README.md
boards/esp32-c3/src/: main.rs
config/: sixface-mapping.example.json
crates/imu-core/: Cargo.toml
crates/imu-core/src/: lib.rs
crates/imu-validation/: Cargo.toml
crates/imu-validation/src/: lib.rs
crates/mpu6050-driver/: Cargo.toml
crates/mpu6050-driver/src/: config.rs  fifo.rs  interrupt.rs  lib.rs  power.rs  raw.rs  registers.rs  self_test.rs
crates/mpu6050-driver/tests/: public_api.rs
scripts/: esp-port.sh
tools/imu-tool/: Cargo.toml
tools/imu-tool/src/: lib.rs  main.rs
