[package]
name = "mpu6050-esp32c3-bringup"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
esp-backtrace = { version = "0.18.0", features = ["esp32c3", "panic-handler", "println"] }
esp-hal = { version = "1.1.1", features = ["esp32c3", "unstable"] }
esp-println = { version = "0.16.1", features = ["esp32c3", "log-04"] }
log = "0.4.28"
mpu6050-driver = { path = "../../crates/mpu6050-driver" }
